fix nav bar height and overflow-x: hidden

--- a/css/home.css
+++ b/css/home.css
@@ -377,7 +377,7 @@ th:hover {
         text-align: center!important;
     }
     table {
-        /* padding-right: 50px; */
+        height: calc(100% - 75px);
         width: 100%;
     }
   }
